--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_change/asset_data_change_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_data_change/asset_data_change_form.html
@@ -152,7 +152,7 @@
 </div>
 <div class="model-form-footer">
     <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}" >取消</button>
-    <button th:if="${perm.checkAnyAuth('eam_asset_data_change:create','eam_asset_data_change:update','eam_asset_data_change:save')}" class="layui-btn" style="margin-right: 15px;display: none;"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
+    <button  th:if="${dataChangeFormBtn}"  class="layui-btn" style="margin-right: 15px;display: none;"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
 </div>
 
 <script type="text/javascript" src="/module/global.js" th:src="'/module/global.js?'+${cacheKey}"></script>
@@ -169,10 +169,9 @@
         "businessName":{"labelInForm":"业务名称","inputType":"text_input","required":true}
     };
 
-
-    var AUTH_PREFIX="eam_asset_data_change";
     // 变更类型
     var CHANGE_TYPE = [[${changeType}]] ;
+    var AUTH_PREFIX=CHANGE_TYPE;
     // 单据ID
     var BILL_ID = [[${billId}]] ;
     // 单据类型
