--- a/eam/view/view-eam/src/main/resources/public/business/eam/operate/operate_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/operate/operate_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产操作 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-26 15:26:57
+ * @since 2021-10-28 21:39:13
  */
  -->
  <!DOCTYPE html>
@@ -78,7 +78,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('操作编码')}">操作编码</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="operateCode" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.common.CodeModuleEnum')}"></div>
+                            <div id="operateCode" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetOperateEnum')}"></div>
                         </div>
                     </div>
 
@@ -109,7 +109,7 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
-    var SELECT_OPERATECODE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.CodeModuleEnum')}]];
+    var SELECT_OPERATECODE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetOperateEnum')}]];
     var RADIO_APPROVAL_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusYNEnum')}]];
     var VALIDATE_CONFIG={"approval":{"labelInForm":"审批","inputType":"radio_box","required":true},"name":{"labelInForm":"名称","inputType":"text_input","required":true},"allocateCode":{"labelInForm":"分配编号","inputType":"text_input","required":true},"operateCode":{"labelInForm":"操作编码","inputType":"select_box","required":true}};
     var AUTH_PREFIX="eam_operate";
