--- a/eam/view/view-eam/src/main/resources/public/business/eam/operate/operate_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/operate/operate_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产操作 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-10-26 15:26:57
+ * @since 2021-10-28 21:39:11
  */
  -->
  <!DOCTYPE html>
@@ -96,7 +96,7 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
-    var SELECT_OPERATECODE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.CodeModuleEnum')}]];
+    var SELECT_OPERATECODE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetOperateEnum')}]];
     var RADIO_APPROVAL_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusYNEnum')}]];
     var AUTH_PREFIX="eam_operate";
 
