--- a/eam/view/view-eam/src/main/resources/public/business/eam/base_station/base_station_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/base_station/base_station_list.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
- * 存放位置 列表页 JS 脚本
+ * rfid基站 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-11-03 15:19:08
+ * @since 2021-11-03 15:24:10
  */
  -->
  <!DOCTYPE html>
@@ -11,7 +11,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-    <title th:text="${lang.translate('存放位置')}">存放位置</title>
+    <title th:text="${lang.translate('rfid基站')}">rfid基站</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css" th:href="'/assets/libs/layui/css/layui.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
@@ -35,27 +35,28 @@
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
                     <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 名称 , name ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 基站区域 , areaId ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 基站名称 , name ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('名称')}" class="search-label name-label">名称</span><span class="search-colon">:</span></div>
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('基站名称')}" class="search-label name-label">基站名称</span><span class="search-colon">:</span></div>
                         <input id="name" class="layui-input search-input" style="width: 150px" type="text" />
                     </div>
-                    <!-- 备注 , notes ,typeName=text_input, isHideInSearch=true -->
-                    <!-- area_id , areaId ,typeName=text_input, isHideInSearch=true -->
-                    <!-- device_id , deviceId ,typeName=text_input, isHideInSearch=true -->
-                    <!-- device_type , deviceType ,typeName=select_box, isHideInSearch=false -->
+                    <!-- 经度 , longitude ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 纬度 , latitude ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 设备ID , deviceId ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 设备类型 , deviceType ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('device_type')}" class="search-label deviceType-label">device_type</span><span class="search-colon">:</span></div>
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('设备类型')}" class="search-label deviceType-label">设备类型</span><span class="search-colon">:</span></div>
                         <div id="deviceType" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetBorrowStatusEnum')}" style="width:150px"></div>
                     </div>
-                    <!-- is_on_line , isOnLine ,typeName=text_input, isHideInSearch=false -->
+                    <!-- 是否在线 , isOnLine ,typeName=number_input, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('is_on_line')}" class="search-label isOnLine-label">is_on_line</span><span class="search-colon">:</span></div>
-                        <input id="isOnLine" class="layui-input search-input" style="width: 150px" type="text" />
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('是否在线')}" class="search-label isOnLine-label">是否在线</span><span class="search-colon">:</span></div>
+                            <input id="isOnLine" class="layui-input search-input" style="width: 150px" type="text" autocomplete="off" input-type="number_input" integer="true" decimal="false" allow-negative="true" step="1.0" min-value="" max-value="" scale="0"/>
                     </div>
-                    <!-- work_type , workType ,typeName=select_box, isHideInSearch=false -->
+                    <!-- 工作类型 , workType ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style=""><span th:text="${lang.translate('work_type')}" class="search-label workType-label">work_type</span><span class="search-colon">:</span></div>
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('工作类型')}" class="search-label workType-label">工作类型</span><span class="search-colon">:</span></div>
                         <div id="workType" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetBorrowStatusEnum')}" style="width:150px"></div>
                     </div>
 
@@ -86,19 +87,19 @@
 <!-- 表格工具栏 -->
 <script type="text/html" id="toolbarTemplate">
     <div class="layui-btn-container">
-        <button th:if="${perm.checkAuth('eam_position:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
-        <button th:if="${perm.checkAuth('eam_position:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm batch-delete-button" lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
+        <button th:if="${perm.checkAuth('rfid_base_station:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
+        <button th:if="${perm.checkAuth('rfid_base_station:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm batch-delete-button" lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
     </div>
 </script>
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
 
-    <button th:if="${perm.checkAuth('eam_position:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
-    <button th:if="${perm.checkAnyAuth('eam_position:update','eam_position:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button" lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
+    <button th:if="${perm.checkAuth('rfid_base_station:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
+    <button th:if="${perm.checkAnyAuth('rfid_base_station:update','rfid_base_station:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button" lay-event="edit" th:text="${lang.translate('修改')}" data-id="{{d.id}}">修改</button>
 
 
-    <button th:if="${perm.checkAuth('eam_position:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button" lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
+    <button th:if="${perm.checkAuth('rfid_base_station:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button" lay-event="del" th:text="${lang.translate('删除')}" data-id="{{d.id}}">删除</button>
 
 
 </script>
@@ -108,13 +109,13 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
     var SELECT_DEVICETYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetBorrowStatusEnum')}]];
     var SELECT_WORKTYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetBorrowStatusEnum')}]];
-    var AUTH_PREFIX="eam_position";
+    var AUTH_PREFIX="rfid_base_station";
 
 
 </script>
 
-<script th:src="'/business/eam/position/position_ext.js?'+${cacheKey}"></script>
-<script th:src="'/business/eam/position/position_list.js?'+${cacheKey}"></script>
+<script th:src="'/business/eam/base_station/base_station_ext.js?'+${cacheKey}"></script>
+<script th:src="'/business/eam/base_station/base_station_list.js?'+${cacheKey}"></script>
 
 </body>
 </html>
