--- a/eam/common/generator/src/main/resources/templates/ServiceImplment.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ServiceImplment.java.vm
@@ -12,13 +12,13 @@ import org.springframework.stereotype.Service;
 
 @Service("#(beanName)")
 public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(interfaceName) {
-	
+
 	/**
 	 * 注入DAO对象
 	 * */
 	#if(daoName!=null && daoName!="")@Resource(name=#(daoName)) #else @Autowired  #end
 	private DAO dao=null;
-	
+
 	/**
 	 * 获得 DAO 对象
 	 * */
@@ -29,24 +29,26 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	private #(jd.typeName) #(jd.varName);
 	#end
 
-	
+
 	@Override
 	public Object generateId(Field field) {
 		return IDGenerator.getSnowflakeIdString();
 	}
-	
+
 	/**
-	 * 插入实体
-	 * @param #(poVar) 实体数据
-	 * @return 插入是否成功
-	 * */
+	 * 添加，根据 throwsException 参数抛出异常或返回 Result 对象
+	 *
+	 * @param #(poVar)  数据对象
+	 * @param throwsException 是否抛出异常，如果不抛出异常，则返回一个失败的 Result 对象
+	 * @return 结果 , 如果失败返回 false，成功返回 true
+	 */
 	@Override
-	#if(hasRealtionSave)
+	#if(hasRelationSave)
 	@Transactional
 	#end
-	public Result insert(#(poSimpleName) #(poVar)) {
-		Result r=super.insert(#(poVar));
-		#if(hasRealtionSave)
+	public Result insert(#(poSimpleName) #(poVar),boolean throwsException) {
+		Result r=super.insert(#(poVar),throwsException);
+		#if(hasRelationSave)
 		//保存关系
 		if(r.success()) {
 		#for (rd : relationSaveDescs)
@@ -56,7 +58,20 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 		#end
 		return r;
 	}
-	
+
+	/**
+	 * 添加，如果语句错误，则抛出异常
+	 * @param #(poVar) 数据对象
+	 * @return 插入是否成功
+	 * */
+	@Override
+	#if(hasRelationSave)
+	@Transactional
+	#end
+	public Result insert(#(poSimpleName) #(poVar)) {
+		return this.insert(#(poVar),true);
+	}
+
 	/**
 	 * 批量插入实体，事务内
 	 * @param #(poListVar) 实体数据清单
@@ -66,22 +81,37 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	public Result insertList(List<#(poSimpleName)> #(poListVar)) {
 		return super.insertList(#(poListVar));
 	}
-	
+
 #(deleteByIdMethods)
-	
+
 	/**
-	 * 更新实体
+	 * 更新，如果执行错误，则抛出异常
 	 * @param #(poVar) 数据对象
 	 * @param mode 保存模式
 	 * @return 保存是否成功
 	 * */
 	@Override
-	#if(hasRealtionSave)
+	#if(hasRelationSave)
 	@Transactional
 	#end
 	public Result update(#(poSimpleName) #(poVar) , SaveMode mode) {
-		Result r=super.update(#(poVar) , mode);
-		#if(hasRealtionSave)
+		return this.update(#(poVar),mode,true);
+	}
+
+	/**
+	 * 更新，根据 throwsException 参数抛出异常或返回 Result 对象
+	 * @param #(poVar) 数据对象
+	 * @param mode 保存模式
+	 * @param throwsException 是否抛出异常，如果不抛出异常，则返回一个失败的 Result 对象
+	 * @return 保存是否成功
+	 * */
+	@Override
+	#if(hasRelationSave)
+	@Transactional
+	#end
+	public Result update(#(poSimpleName) #(poVar) , SaveMode mode,boolean throwsException) {
+		Result r=super.update(#(poVar) , mode , throwsException);
+		#if(hasRelationSave)
 		//保存关系
 		if(r.success()) {
 		#for (rd : relationSaveDescs)
@@ -91,7 +121,7 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 		#end
 		return r;
 	}
-	
+
 	/**
 	 * 更新实体集，事务内
 	 * @param #(poListVar) 数据对象列表
@@ -102,9 +132,9 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	public Result updateList(List<#(poSimpleName)> #(poListVar) , SaveMode mode) {
 		return super.updateList(#(poListVar) , mode);
 	}
-	
-#(updateByIdMethod) 
-	
+
+#(updateByIdMethod)
+
 #(getByIdMethod)
 
 #if(isSimplePK)
@@ -118,7 +148,7 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 
 	/**
 	 * 查询实体集合，默认情况下，字符串使用模糊匹配，非字符串使用精确匹配
-	 * 
+	 *
 	 * @param sample  查询条件
 	 * @return 查询结果
 	 * */
@@ -126,11 +156,11 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	public List<#(poSimpleName)> queryList(#(poSimpleName) sample) {
 		return super.queryList(sample);
 	}
-	
-	
+
+
 	/**
 	 * 分页查询实体集，字符串使用模糊匹配，非字符串使用精确匹配
-	 * 
+	 *
 	 * @param sample  查询条件
 	 * @param pageSize 分页条数
 	 * @param pageIndex 页码
@@ -140,10 +170,10 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	public PagedList<#(poSimpleName)> queryPagedList(#(poSimpleName) sample, int pageSize, int pageIndex) {
 		return super.queryPagedList(sample, pageSize, pageIndex);
 	}
-	
+
 	/**
 	 * 分页查询实体集，字符串使用模糊匹配，非字符串使用精确匹配
-	 * 
+	 *
 	 * @param sample  查询条件
 	 * @param condition 其它条件
 	 * @param pageSize 分页条数
@@ -154,7 +184,7 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	public PagedList<#(poSimpleName)> queryPagedList(#(poSimpleName) sample, ConditionExpr condition, int pageSize, int pageIndex) {
 		return super.queryPagedList(sample, condition, pageSize, pageIndex);
 	}
-	
+
 	/**
 	 * 检查 角色 是否已经存在
 	 *
