--- a/eam/common/generator/src/main/resources/templates/ServiceInterface.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ServiceInterface.java.vm
@@ -7,11 +7,20 @@ package #(package);
 public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 
 	/**
-	 * 插入实体
-	 * @param #(poVar) 实体数据
+	 * 添加，如果语句错误，则抛出异常
+	 * @param #(poVar) 数据对象
 	 * @return 插入是否成功
 	 * */
 	Result insert(#(poSimpleName) #(poVar));
+
+	/**
+	 * 添加，根据 throwsException 参数抛出异常或返回 Result 对象
+	 *
+	 * @param #(poVar)  数据对象
+	 * @param throwsException 是否抛出异常，如果不抛出异常，则返回一个失败的 Result 对象
+	 * @return 结果 , 如果失败返回 false，成功返回 true
+	 */
+	Result insert(#(poSimpleName) #(poVar),boolean throwsException);
 
 	/**
 	 * 批量插入实体，事务内
@@ -42,12 +51,23 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	#(updateByIdMethod)
 
 	/**
-	 * 更新实体
+	 * 更新，如果执行错误，则抛出异常
 	 * @param #(poVar) 数据对象
 	 * @param mode 保存模式
 	 * @return 保存是否成功
 	 * */
 	Result update(#(poSimpleName) #(poVar) , SaveMode mode);
+
+
+	/**
+	 * 更新，根据 throwsException 参数抛出异常或返回 Result 对象
+	 *
+	 * @param #(poVar) 数据对象
+	 * @param mode SaveMode,数据更新的模式
+	 * @param throwsException 是否抛出异常，如果不抛出异常，则返回一个失败的 Result 对象
+	 * @return 结果
+	 */
+	Result update(#(poSimpleName) #(poVar) , SaveMode mode,boolean throwsException);
 
 
 	/**
@@ -59,7 +79,16 @@ public interface #(simpleName) extends ISuperService<#(poSimpleName)> {
 	Result updateList(List<#(poSimpleName)> #(poListVar), SaveMode mode);
 
 	/**
-	 * 保存实体，如果主键值不为 null，则更新，否则插入
+	 * 保存实体，根据 throwsException 参数抛出异常或返回 Result 对象
+	 * @param #(poVar) 实体数据
+	 * @param mode 保存模式
+	 * @param throwsException 是否抛出异常，如果不抛出异常，则返回一个失败的 Result 对象
+	 * @return 保存是否成功
+	 * */
+	Result save(#(poSimpleName) #(poVar) , SaveMode mode,boolean throwsException);
+
+	/**
+	 * 保存实体，如果语句错误，则抛出异常
 	 * @param #(poVar) 实体数据
 	 * @param mode 保存模式
 	 * @return 保存是否成功
