--- a/eam/common/generator/src/main/resources/templates/ext.js.vm
+++ b/eam/common/generator/src/main/resources/templates/ext.js.vm
@@ -155,6 +155,13 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
             console.log("form:beforeInit")
         },
         /**
+         * 窗口调节前
+         * */
+        beforeAdjustPopup:function () {
+            console.log('beforeAdjustPopup');
+            return true;
+        },
+        /**
          * 表单数据填充前
          * */
         beforeDataFill:function (data) {
@@ -184,6 +191,13 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
          * */
         beforeSubmit:function (data) {
             console.log("beforeSubmit",data);
+            return true;
+        },
+        /**
+         * 数据提交后窗口关闭前，如果返回 false，停止后续步骤的执行
+         * */
+        betweenFormSubmitAndClose:function (param,result) {
+            console.log("betweenFormSubmitAndClose",result);
             return true;
         },
         /**
