--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
@@ -1,8 +1,8 @@
-<!-- 
+<!--
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-11-09 08:30:18
+ * @since 2021-11-15 08:36:00
  */
  -->
  <!DOCTYPE html>
@@ -49,7 +49,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('资产分类')}">资产分类</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="categoryId" input-type="select" th:data="${'/service-pcm/pcm-catalog/query-nodes'}"></div>
+                            <div id="categoryId" input-type="select" th:data="${'/service-pcm/pcm-catalog/query-nodes'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -79,7 +79,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('办理状态')}">办理状态</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="status" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}"></div>
+                            <div id="status" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -109,7 +109,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('资产状态')}">资产状态</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="assetStatus" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}"></div>
+                            <div id="assetStatus" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -132,7 +132,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('物品档案')}">物品档案</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="goodsId" input-type="select" th:data="${'/service-eam/eam-goods/query-list'}"></div>
+                            <div id="goodsId" input-type="select" th:data="${'/service-eam/eam-goods/query-list'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -148,7 +148,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('厂商')}">厂商</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="manufacturerId" input-type="select" th:data="${'/service-eam/eam-manufacturer/query-list'}"></div>
+                            <div id="manufacturerId" input-type="select" th:data="${'/service-eam/eam-manufacturer/query-list'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -192,7 +192,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('安全等级')}">安全等级</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="safetyLevelCode" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_safety_level'}"></div>
+                            <div id="safetyLevelCode" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_safety_level'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -240,7 +240,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('位置')}">位置</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="positionId" input-type="select" th:data="${'/service-eam/eam-position/query-paged-list'}"></div>
+                            <div id="positionId" input-type="select" th:data="${'/service-eam/eam-position/query-paged-list'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -256,7 +256,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('仓库')}">仓库</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="warehouseId" input-type="select" th:data="${'/service-eam/eam-warehouse/query-list'}"></div>
+                            <div id="warehouseId" input-type="select" th:data="${'/service-eam/eam-warehouse/query-list'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -265,7 +265,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('来源')}">来源</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="sourceId" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_source'}"></div>
+                            <div id="sourceId" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_source'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -359,7 +359,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('维保商')}">维保商</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="maintainerId" input-type="select" th:data="${'/service-eam/eam-maintainer/query-list'}"></div>
+                            <div id="maintainerId" input-type="select" th:data="${'/service-eam/eam-maintainer/query-list'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -375,7 +375,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('维保状态')}">维保状态</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="maintenanceStatus" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_maintenance_status'}"></div>
+                            <div id="maintenanceStatus" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_maintenance_status'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -430,7 +430,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('财务分类')}">财务分类</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="financialCategoryId" input-type="select" th:data="${'/service-eam/eam-category-finance/query-paged-list'}"></div>
+                            <div id="financialCategoryId" input-type="select" th:data="${'/service-eam/eam-category-finance/query-paged-list'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -446,7 +446,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('供应商')}">供应商</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="supplierId" input-type="select" th:data="${'/service-eam/eam-supplier/query-list'}"></div>
+                            <div id="supplierId" input-type="select" th:data="${'/service-eam/eam-supplier/query-list'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -551,7 +551,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('设备状态')}">设备状态</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="equipmentStatus" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetEquipmentStatusEnum')}"></div>
+                            <div id="equipmentStatus" input-type="select" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetEquipmentStatusEnum')}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -604,7 +604,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('运行环境')}">运行环境</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="equipmentEnvironmentCode" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_equipment_environment'}"></div>
+                            <div id="equipmentEnvironmentCode" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_equipment_environment'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -620,7 +620,7 @@
                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('机柜')}">机柜</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <div id="rackId" input-type="select" th:data="${'/service-datacenter/dc-rack/query-paged-list'}"></div>
+                            <div id="rackId" input-type="select" th:data="${'/service-datacenter/dc-rack/query-paged-list'}" extraParam="{}"></div>
                         </div>
                     </div>
 
