--- a/eam/common/generator/src/main/resources/templates/ApiController.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ApiController.java.vm
@@ -162,7 +162,7 @@ public class #(simpleName) extends SuperController {
 	public Result<#(poSimpleName)> getById(#(controllerMethodParameterDeclare4GetById)) {
 		Result<#(poSimpleName)> result=new Result<>();
 		#(poSimpleName) #(poVarName)=#(serviceVarName).getById(#(controllerMethodParameterPassIn4GetById));
-
+		#if(!joinPropertyUnits.isEmpty())
 		// join 关联的对象
 		#(serviceVarName).dao().fill(#(poVarName))
 		#if(fillWithUnits.fillGetById==null)
@@ -173,7 +173,7 @@ public class #(simpleName) extends SuperController {
 			#(fillWithUnits.fillGetById.code)
 		#end
 			.execute();
-
+		#end
 		result.success(true).data(#(poVarName));
 		return result;
 	}
@@ -253,7 +253,12 @@ public class #(simpleName) extends SuperController {
 	public Result<PagedList<#(poSimpleName)>> queryPagedList(#(voSimpleName) sample) {
 		Result<PagedList<#(poSimpleName)>> result=new Result<>();
 		PagedList<#(poSimpleName)> list=#(serviceVarName).queryPagedList(sample,sample.getPageSize(),sample.getPageIndex());
-
+		#if(!listPermFields.isEmpty())
+		#for(f : listPermFields)
+		this.limitForPermission(list,"#(f.listPerm)","#(f.varName)");
+		#end
+		#end
+		#if(!joinPropertyUnits.isEmpty())
 		// join 关联的对象
 		#(serviceVarName).dao().fill(list)
 		#if(fillWithUnits.fillQueryPagedList==null)
@@ -264,7 +269,7 @@ public class #(simpleName) extends SuperController {
 			#(fillWithUnits.fillQueryPagedList.code)
 		#end
 			.execute();
-
+		#end
 		result.success(true).data(list);
 		return result;
 	}
