--- a/eam/common/generator/src/main/resources/templates/list.html.vm
+++ b/eam/common/generator/src/main/resources/templates/list.html.vm
@@ -130,15 +130,15 @@
 <script type="text/html" id="toolbarTemplate">
     <div class="layui-btn-container">
         #if(!disableCreateNew)
-        <button th:if="${perm.checkAuth('#(authPrefix):create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
+        <button th:if="${perm.checkAuth('#(authPrefix):create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button #if(createNewButton.css!=null)#(createNewButton.css)#end" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate(#if(createNewButton.label==null)'新建'#else'#(createNewButton.label)'#end)}">#if(createNewButton.label==null)新建#else#(createNewButton.label)#end</span></button>
         #end
         #if(!disableBatchDelete)
         #if(isSimplePK)
-        <button th:if="${perm.checkAuth('#(authPrefix):delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm batch-delete-button" lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
+        <button th:if="${perm.checkAuth('#(authPrefix):delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm batch-delete-button #if(batchDeleteButton.css!=null)#(batchDeleteButton.css)#end" lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate(#if(batchDeleteButton.label==null)'删除'#else'#(batchDeleteButton.label)'#end)}">#if(createNewButton.label==null)删除#else#(createNewButton.label)#end</span></button>
         #end
         #end
         #for(b:toolButtons)
-        <button id="#(b.id)" class="layui-btn icon-btn layui-btn-sm #if(b.css!=null) #(b.css) #end" lay-event="tool-#(b.id)">#if(b.iconHtml!=null) #(b.iconHtml) #end<span th:text="${lang.translate('#(b.label)')}">#(b.label)</span></button>
+        <button id="#(b.id)"  #if(b.perm!=null)th:if="${perm.checkAuth('#(b.perm)')}"#end class="layui-btn icon-btn layui-btn-sm #if(b.css!=null) #(b.css) #end" lay-event="tool-#(b.id)">#if(b.iconHtml!=null) #(b.iconHtml) #end<span th:text="${lang.translate('#(b.label)')}">#(b.label)</span></button>
         #end
     </div>
 </script>
